# aissemble-lite-ffmpeg

./: .gitignore  LICENSE.txt  README.md  docker-compose.yml  licenserc.toml  pom.xml
.github/workflows/: test.yml
backend/: .dockerignore  Dockerfile  README.md  pom.xml  pyproject.toml
backend/notebooks/: foo.ipynb
backend/output/metrics/: House Hearing on the Role of Special Operations in Great Power Competition [mAvYNdTxAdc].json  Learning AI Series — Transformers, Attention & Embeddings： The Engineering Deep Dive 💻 [4-gT1iJ2B88].json  Xi Jinping’s paranoid approach to AGI, debt crisis, & Politburo politics — Victor Shih [b1TeeIG6Uaw].json  aiSSEMBLE Daily Standup-20251219_110209-Meeting Recording.json  multidisciplinary_perspectives_on_leadership_-_dr._grace_wright,_dr._eric_ruderman,_ashley_diaz-granados,thomas_lahnthaler (240p) 1.json
backend/src/aissemble_lite_ffmpeg/: __init__.py  __main__.py  common.py  webapp.py
backend/src/aissemble_lite_ffmpeg/etl/: __init__.py  download.py
backend/src/aissemble_lite_ffmpeg/modeling/: __init__.py  handler.py  train.py
backend/src/aissemble_lite_ffmpeg/preprocessing/: README.md  ffmpeg_handler.py  input_handler.py  s3_handler.py  transcribe.py
backend/src/aissemble_lite_ffmpeg/routers/: __init__.py  audio.py
backend/src/resources/krausening/base/: oip.properties
backend/tests/: __init__.py  conftest.py  ruff.toml
backend/tests/features/: reference-src.feature
backend/tests/features/steps/: reference_src.py
backend/tests/performance/: README.md  baseline_results.jsonl  baseline_test.py
backend/tests/performance/test_files/: Learning AI Series — Transformers, Attention & Embeddings： The Engineering Deep Dive 💻 [4-gT1iJ2B88].webm  Xi Jinping’s paranoid approach to AGI, debt crisis, & Politburo politics — Victor Shih [b1TeeIG6Uaw].webm
frontend/: .dockerignore  Dockerfile  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pom.xml  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
